src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_RepeatTypeOnXArray.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    xmlns:y="http://schemas.microsoft.com/winfx/2006/xaml"    
>
    <Button>
        <Button.Content>
            <x:Array x:Type="{x:Type Button}" y:Type="{y:Type TextBlock}">                
                <TextBlock> Hi there </TextBlock>
            </x:Array>
        </Button.Content>
    </Button>
</DockPanel>
</Page>
